--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<meta charset="utf-8" />
 	<link rel="icon" href="molly-logo.png" />
-	<title>$MINE | SOL</title>
+	<title>$MOLE | SOL</title>
 	<meta property="og:title" content="$MINE - a subterranean friend." />
 	<meta property="og:type" content="website" />
 	<meta property="og:image" content="./about-image.webp" />
